# pythonweb_hw07

./: .gitignore  alembic.ini  cli_crud.py  my_select.py  orms.py  pyproject.toml  requierements.txt  seed.py  sqlalchemy.db
alembic_hw7/: env.py
alembic_hw7/versions/: cf17a1de7477_init.py
lesson_1/: sql_alchemy_core.py  sql_alchemy_relations_example.py  sql_alchemy_sessions.py
