[tool.poetry]
name = "pythonweb-hw07"
version = "0.1.0"
description = ""
authors = ["Dmytro-Tarasenko <ug.dotenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.28"
rich = "^13.7.1"
faker = "^24.0.0"
alembic = "^1.13.1"


[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
